--- a/MasstransitReactApp.Server/MasstransitReactApp.Server.csproj
+++ b/MasstransitReactApp.Server/MasstransitReactApp.Server.csproj
@@ -9,9 +9,21 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MassTransit" Version="8.3.0" />
-    <PackageReference Include="MassTransit.EntityFrameworkCore" Version="8.3.0" />
-    <PackageReference Include="MassTransit.SqlTransport.PostgreSQL" Version="8.3.0" />
+    <Compile Remove="Context\**" />
+    <Compile Remove="Models\**" />
+    <Compile Remove="StateMachine\**" />
+    <Content Remove="Context\**" />
+    <Content Remove="Models\**" />
+    <Content Remove="StateMachine\**" />
+    <EmbeddedResource Remove="Context\**" />
+    <EmbeddedResource Remove="Models\**" />
+    <EmbeddedResource Remove="StateMachine\**" />
+    <None Remove="Context\**" />
+    <None Remove="Models\**" />
+    <None Remove="StateMachine\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
       <Version>8.*-*</Version>
     </PackageReference>
@@ -19,7 +31,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0" />
   </ItemGroup>
 
@@ -27,6 +38,7 @@
     <ProjectReference Include="..\masstransitreactapp.client\masstransitreactapp.client.esproj">
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
+    <ProjectReference Include="..\MasstransitSaga.Core\MasstransitSaga.Core.csproj" />
   </ItemGroup>
 
 </Project>
