--- a/masstransitreactapp.client/package.json
+++ b/masstransitreactapp.client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@microsoft/signalr": "^8.0.7",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "masstransitreactapp.client": "file:",
     "react": "^18.3.1",
