--- a/MasstransitSaga.Core/MasstransitSaga.Core.csproj
+++ b/MasstransitSaga.Core/MasstransitSaga.Core.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="MassTransit" Version="8.3.0" />
 	<PackageReference Include="MassTransit.EntityFrameworkCore" Version="8.3.0" />
+	<PackageReference Include="MassTransit.RabbitMQ" Version="8.3.0" />
 	<PackageReference Include="MassTransit.SqlTransport.PostgreSQL" Version="8.3.0" />
 	<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
   </ItemGroup>
