--- a/MasstransitSaga.OrderAcceptService/appsettings.json
+++ b/MasstransitSaga.OrderAcceptService/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "PostgresConnection": "Host=localhost;Port=5432;Database=order;Username=postgres;Password=postgres"
   },
+  "RabbitMq": {
+    "Host": "localhost",
+    "vHost": "gateway",
+    "Username": "admin",
+    "Password": "123456789"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
