--- a/MasstransitSaga.Core/MasstransitSaga.Core.csproj
+++ b/MasstransitSaga.Core/MasstransitSaga.Core.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="MassTransit" Version="8.3.0" />
 	<PackageReference Include="MassTransit.EntityFrameworkCore" Version="8.3.0" />
 	<PackageReference Include="MassTransit.RabbitMQ" Version="8.3.0" />
+	<PackageReference Include="MassTransit.Redis" Version="8.3.0" />
 	<PackageReference Include="MassTransit.SqlTransport.PostgreSQL" Version="8.3.0" />
 	<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
   </ItemGroup>
