--- a/MasstransitSaga.Core/MasstransitSaga.Core.csproj
+++ b/MasstransitSaga.Core/MasstransitSaga.Core.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EFCore.BulkExtensions" Version="8.1.1" />
     <PackageReference Include="MassTransit" Version="8.3.0" />
 	<PackageReference Include="MassTransit.EntityFrameworkCore" Version="8.3.0" />
 	<PackageReference Include="MassTransit.RabbitMQ" Version="8.3.0" />
 	<PackageReference Include="MassTransit.Redis" Version="8.3.0" />
 	<PackageReference Include="MassTransit.SqlTransport.PostgreSQL" Version="8.3.0" />
+	<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
   </ItemGroup>
 
