--- a/MasstransitSaga.Core/MasstransitSaga.Core.csproj
+++ b/MasstransitSaga.Core/MasstransitSaga.Core.csproj
@@ -15,6 +15,7 @@
 	<PackageReference Include="MassTransit.SqlTransport.PostgreSQL" Version="8.3.0" />
 	<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
+	<PackageReference Include="RedLock.net" Version="2.3.2" />
   </ItemGroup>
 
 </Project>
