--- a/MasstransitSaga.Core/MasstransitSaga.Core.csproj
+++ b/MasstransitSaga.Core/MasstransitSaga.Core.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="MassTransit" Version="8.3.0" />
+    <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
 	<PackageReference Include="MassTransit.EntityFrameworkCore" Version="8.3.0" />
+	<PackageReference Include="MassTransit.Http" Version="6.3.2" />
 	<PackageReference Include="MassTransit.RabbitMQ" Version="8.3.0" />
 	<PackageReference Include="MassTransit.SqlTransport.PostgreSQL" Version="8.3.0" />
 	<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
