--- a/MasstransitReactApp.Server/appsettings.json
+++ b/MasstransitReactApp.Server/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "PostgresConnection": "Host=localhost;Port=5432;Database=order;Username=postgres;Password=postgres"
+    "PostgresConnection": "Host=localhost;Port=5432;Database=order;Username=postgres;Password=postgres",
+    "SQLServerConnection": "Server=192.168.59.15;Database=ToanlaDev;User Id=sa;Password=Dba#2020; TrustServerCertificate=Yes;",
+    "MySQLConnection": "server=localhost;port=3306;database=ecommerce;uid=root;password=123456"
   },
   "Logging": {
     "LogLevel": {
