--- a/MasstransitSaga.Core/MasstransitSaga.Core.csproj
+++ b/MasstransitSaga.Core/MasstransitSaga.Core.csproj
@@ -12,6 +12,8 @@
 	<PackageReference Include="MassTransit.RabbitMQ" Version="8.3.0" />
 	<PackageReference Include="MassTransit.SqlTransport.PostgreSQL" Version="8.3.0" />
 	<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
+	<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
   </ItemGroup>
 
 </Project>
