Add RabbitMQ configuration and monitoring setup; update appsettings for RabbitMQ connection

--- a/MasstransitReactApp.Server/appsettings.json
+++ b/MasstransitReactApp.Server/appsettings.json
@@ -4,6 +4,12 @@
     "SQLServerConnection": "Server=192.168.59.15;Database=ToanlaDev;User Id=sa;Password=Dba#2020; TrustServerCertificate=Yes;",
     "MySQLConnection": "server=localhost;port=3306;database=world;uid=root;password=123456"
   },
+  "RabbitMq": {
+    "Host": "localhost",
+    "vHost": "gateway",
+    "Username": "admin",
+    "Password": "123456789"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
