--- a/devops/world/service.yml
+++ b/devops/world/service.yml
@@ -12,4 +12,8 @@ spec:
     - protocol: TCP
       port: 8083       # Port mà Service sẽ expose
       targetPort: 8083 # Port container đang lắng nghe
+    - name: metrics
+      protocol: TCP
+      port: 8083
+      targetPort: 8083
   type: LoadBalancer   # Sử dụng LoadBalancer để expose ứng dụng (hoặc NodePort tùy mục đích)
